--- a/assets/css/layouts/_header.scss
+++ b/assets/css/layouts/_header.scss
@@ -4,6 +4,12 @@
     right: 0;
     left: 0;
     z-index: 99;
+    transition: .3s;
+
+    &.sticky{
+        background-color: #333;
+        padding: 20px 0;
+    }
     .header{
         display: grid;
         grid-template-columns: 15% 80%;
@@ -28,6 +34,11 @@
                 justify-content: flex-end;
 
                 li{
+                    &.current{
+                        a{
+                            color: #ff7720;
+                        }
+                    }
                     a{
                         margin-left: 20px;
                         text-transform: capitalize;
