--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -388,6 +388,10 @@ p {
   color: #ff7720;
 }
 
+.slicknav_menu {
+  display: none;
+}
+
 .banner-area {
   background-position: center;
   background-size: cover;
@@ -1156,5 +1160,186 @@ p {
 
 .footer-area p {
   margin-top: 10px;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .container {
+    width: 970px;
+  }
+  .about-area .about .about-img:after {
+    display: none;
+  }
+  .process-area .process {
+    -ms-grid-columns: (auto)[4];
+        grid-template-columns: repeat(4, auto);
+  }
+  .contact {
+    -ms-grid-columns: (auto)[2];
+        grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .container {
+    width: 750px;
+  }
+  .slicknav_menu {
+    display: block;
+  }
+  .menu {
+    display: none;
+  }
+  .header-area.sticky {
+    padding: 30px 0;
+  }
+  .header-area .header .logo a {
+    position: fixed;
+    top: 15px;
+  }
+  .slicknav_menu {
+    position: fixed;
+    z-index: 999;
+    right: 0;
+    background-color: transparent;
+    width: 100%;
+  }
+  .slicknav_menu ul {
+    background-color: #333;
+  }
+  .banner-area {
+    text-align: center;
+  }
+  .banner-area h1 {
+    font-size: 45px;
+  }
+  .about-area .about .about-img:after {
+    display: none;
+  }
+  .process-area .process {
+    -ms-grid-columns: (auto)[4];
+        grid-template-columns: repeat(4, auto);
+  }
+  .contact {
+    -ms-grid-columns: (auto)[2];
+        grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .container {
+    width: 300px;
+  }
+  .slicknav_menu {
+    display: block;
+  }
+  .menu {
+    display: none;
+  }
+  .header-area.sticky {
+    padding: 30px 0;
+  }
+  .header-area .header .logo a {
+    position: fixed;
+    top: 15px;
+  }
+  .slicknav_menu {
+    display: block;
+    position: fixed;
+    z-index: 999;
+    right: 0;
+    background-color: transparent;
+  }
+  .slicknav_menu ul {
+    background-color: #333;
+  }
+  .banner-area {
+    text-align: center;
+  }
+  .banner-area h1 {
+    font-size: 25px;
+  }
+  .about-area .about {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: 40px;
+  }
+  .about-area .about-bottom {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: 30px;
+  }
+  .feature-area::after, .feature-area::before {
+    display: none;
+  }
+  .feature-area .feature {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+  }
+  .feature-area .feature .feature-img {
+    margin-top: 30px;
+  }
+  .services-area .services {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+  }
+  .process-area .process {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: 30px;
+  }
+  .project-area .projects {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: 30px;
+  }
+  .counter-area .counter {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: 30px;
+  }
+  .team-area .team {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: 30px;
+  }
+  .price-area .price {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: 30px;
+  }
+  .testimonials-area .testimonials {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: 30px;
+  }
+  .blog-area .blog {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: 30px;
+  }
+  .subscribe-area .subscribe input[type="submit"] {
+    width: 100%;
+    top: 50px;
+  }
+  .contact-area .contact {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: 30px;
+  }
+  .contact-area .contact .contact-address {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: 30px;
+  }
+  .partner-area .partner {
+    -ms-grid-columns: (auto)[2];
+        grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .container {
+    width: 450px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
